feat: Implement UI/UX Pro Max Search and Workflow Documentation
- Added a new search script (search.py) for querying UI/UX style guides using BM25 algorithm.
- Created comprehensive workflow documentation for UI/UX Pro Max, detailing prerequisites, usage, and search reference.
- Introduced a Windows compatibility fix for the apkeep binary, ensuring 64-bit support.
- Developed the convert page for toolkit, allowing users to convert applications with a user-friendly interface.
- Established the install page for toolkit, enabling users to select and download application versions.
- Designed a layout for the toolkit, including a sidebar navigation and system status display.
- Implemented reusable UI components: ScrollArea and Separator for better UI consistency.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -48,6 +48,81 @@
 			"description": "Sorry, the page you are looking for does not exist or has been moved.",
 			"backHome": "Back to Home"
 		},
+		"toolkit": {
+			"sidebar": {
+				"appTitle": "KGC Toolkit",
+				"appSubtitle": "Game Asset Manager",
+				"install": "Download Game",
+				"installDesc": "Download XAPK",
+				"convert": "Convert",
+				"convertDesc": "XAPK to Unity",
+				"systemReady": "System Ready"
+			},
+			"install": {
+				"title": "Download Game",
+				"subtitle": "Select version and download official XAPK installer package.",
+				"badge": "Install Wizard",
+				"configTitle": "Download Configuration",
+				"configDesc": "Select the game version you want to download.",
+				"versionLabel": "Game Version",
+				"selectVersion": "Select version...",
+				"loadingVersions": "Loading versions...",
+				"errorLoading": "Error loading data",
+				"storageLabel": "Storage Directory",
+				"storageDesc": "Where XAPK file will be saved",
+				"notSelected": "Not selected",
+				"startDownload": "Start Download",
+				"downloading": "Downloading...",
+				"infoTitle": "Information",
+				"infoFormat": "Downloaded file will be in format",
+				"infoNext": "After download completes, you can switch to \"Convert\" tab to process this file."
+			},
+			"convert": {
+				"title": "Convert Assets",
+				"subtitle": "Extract and convert game assets to Unity format.",
+				"badge": "Converter Tool",
+				"alertTitle": "System Note",
+				"alertDesc": "On Linux/macOS, if you encounter \"Too many open files\" error, run:",
+				"configTitle": "Conversion Configuration",
+				"configDesc": "Set input and output paths for the conversion process.",
+				"sourceLabel": "Source File (XAPK)",
+				"notSelectedFile": "No file selected",
+				"selectFileDesc": "Select .xapk file to begin",
+				"changeFile": "Change file",
+				"selectFile": "Select file",
+				"destLabel": "Destination Folder (Unity Project)",
+				"notSelectedFolder": "No folder selected",
+				"selectFolderDesc": "Where Unity project will be saved",
+				"changeFolder": "Change folder",
+				"selectFolder": "Select folder",
+				"startConvert": "Start Conversion",
+				"processing": "Processing...",
+				"checkingTools": "Checking AssetRipper tool..."
+			},
+			"toast": {
+				"downloadStarted": "Download started",
+				"downloadingXapk": "Downloading XAPK file, please wait...",
+				"downloadSuccess": "Download successful!",
+				"savedAt": "Saved at: {{path}}",
+				"downloadFailed": "Download failed!",
+				"downloadTimeout": "Download timed out. Please check network connection and try again.",
+				"systemOverload": "System is overloaded. Please wait and try again later.",
+				"networkError": "Network error, check your internet connection",
+				"downloadInProgress": "Another download is in progress, please wait.",
+				"noSavePath": "You haven't selected a save location.",
+				"version": "Version: {{version}}",
+				"convertSuccess": "Conversion successful!",
+				"convertFailed": "Conversion failed!",
+				"noApp": "You haven't selected an application.",
+				"noFolder": "You haven't selected a save location.",
+				"noFile": "You haven't selected a file."
+			},
+			"dialog": {
+				"selectSavePath": "Select save location",
+				"selectXapk": "Select application (.xapk)",
+				"selectUnityPath": "Select Unity project location"
+			}
+		},
 		"about": {
 			"title": "About",
 			"description": "Support toolkit for King God Castle Vietnam community.",
