--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -48,6 +48,81 @@
 			"description": "Rất tiếc, trang bạn đang tìm kiếm không tồn tại hoặc đã bị di chuyển.",
 			"backHome": "Quay về trang chủ"
 		},
+		"toolkit": {
+			"sidebar": {
+				"appTitle": "KGC Toolkit",
+				"appSubtitle": "Game Asset Manager",
+				"install": "Tải Game",
+				"installDesc": "Download XAPK",
+				"convert": "Chuyển đổi",
+				"convertDesc": "XAPK to Unity",
+				"systemReady": "System Ready"
+			},
+			"install": {
+				"title": "Tải xuống Game",
+				"subtitle": "Chọn phiên bản và tải xuống gói cài đặt XAPK chính thức.",
+				"badge": "Install Wizard",
+				"configTitle": "Cấu hình tải xuống",
+				"configDesc": "Chọn phiên bản game bạn muốn tải về máy.",
+				"versionLabel": "Phiên bản Game",
+				"selectVersion": "Chọn phiên bản...",
+				"loadingVersions": "Đang tải danh sách...",
+				"errorLoading": "Lỗi tải dữ liệu",
+				"storageLabel": "Thư mục lưu trữ",
+				"storageDesc": "Nơi file XAPK sẽ được lưu",
+				"notSelected": "Chưa chọn",
+				"startDownload": "Bắt đầu tải xuống",
+				"downloading": "Đang tải xuống...",
+				"infoTitle": "Thông tin",
+				"infoFormat": "File tải về sẽ có định dạng",
+				"infoNext": "Sau khi tải xong, bạn có thể chuyển sang tab \"Chuyển đổi\" để xử lý file này."
+			},
+			"convert": {
+				"title": "Chuyển đổi Assets",
+				"subtitle": "Giải nén và chuyển đổi tài nguyên game sang định dạng Unity.",
+				"badge": "Converter Tool",
+				"alertTitle": "Lưu ý hệ thống",
+				"alertDesc": "Trên Linux/macOS, nếu gặp lỗi \"Too many open files\", hãy chạy lệnh:",
+				"configTitle": "Cấu hình chuyển đổi",
+				"configDesc": "Thiết lập đường dẫn đầu vào và đầu ra cho quá trình chuyển đổi.",
+				"sourceLabel": "File nguồn (XAPK)",
+				"notSelectedFile": "Chưa chọn file",
+				"selectFileDesc": "Chọn file .xapk để bắt đầu",
+				"changeFile": "Thay đổi file",
+				"selectFile": "Chọn file",
+				"destLabel": "Thư mục đích (Unity Project)",
+				"notSelectedFolder": "Chưa chọn thư mục",
+				"selectFolderDesc": "Nơi lưu project Unity",
+				"changeFolder": "Thay đổi thư mục",
+				"selectFolder": "Chọn thư mục",
+				"startConvert": "Bắt đầu chuyển đổi",
+				"processing": "Đang xử lý...",
+				"checkingTools": "Đang kiểm tra công cụ AssetRipper..."
+			},
+			"toast": {
+				"downloadStarted": "Bắt đầu tải xuống",
+				"downloadingXapk": "Đang tải file XAPK, vui lòng đợi...",
+				"downloadSuccess": "Tải xuống thành công!",
+				"savedAt": "Đã lưu tại: {{path}}",
+				"downloadFailed": "Tải xuống thất bại!",
+				"downloadTimeout": "Tải file bị timeout. Vui lòng kiểm tra kết nối mạng và thử lại.",
+				"systemOverload": "Hệ thống đang quá tải. Vui lòng đợi và thử lại sau.",
+				"networkError": "Lỗi kết nối mạng, kiểm tra internet của bạn",
+				"downloadInProgress": "Đang có quá trình tải khác, vui lòng đợi.",
+				"noSavePath": "Bạn chưa chọn nơi lưu file.",
+				"version": "Phiên bản: {{version}}",
+				"convertSuccess": "Chuyển đổi thành công!",
+				"convertFailed": "Chuyển đổi thất bại!",
+				"noApp": "Bạn chưa chọn ứng dụng.",
+				"noFolder": "Bạn chưa chọn nơi lưu file.",
+				"noFile": "Bạn chưa chọn file."
+			},
+			"dialog": {
+				"selectSavePath": "Chọn nơi lưu file",
+				"selectXapk": "Chọn ứng dụng (.xapk)",
+				"selectUnityPath": "Chọn nơi lưu dự án Unity"
+			}
+		},
 		"about": {
 			"title": "Giới thiệu",
 			"description": "Công cụ hỗ trợ cho cộng đồng King God Castle Việt Nam.",
